[project]
name = "rsna-lumbar-spine-prediction"
version = "0.1.0"
description = "Inference utilities for the RSNA 2024 Lumbar Spine Degenerative Classification challenge."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0,<3.0.0",
    "timm>=0.9.0",
    "transformers>=4.30.0",
    "albumentations>=1.0.0",
    "opencv-python-headless>=4.8.0",
    "pydicom>=2.4.0",
    "pandas>=2.0.0",
    "numpy>=1.25.0",
    "tqdm>=4.66.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Image Recognition",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
rsna-lumbar-spine-prediction = "rsna_lumbar_spine_prediction.cli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
