[metadata]
name = rsna-lumbar-spine-prediction
version = 0.1.0
description = Inference utilities for the RSNA 2024 Lumbar Spine Degenerative Classification challenge.
long_description = file: README.md
long_description_content_type = text/markdown
author = RSNA Competitions
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering :: Image Recognition

[options]
packages = find:
package_dir =
    = src
install_requires =
    torch>=2.0.0,<3.0.0
    timm>=0.9.0
    transformers>=4.30.0
    albumentations>=1.0.0
    opencv-python-headless>=4.8.0
    pydicom>=2.4.0
    pandas>=2.0.0
    numpy>=1.25.0
    tqdm>=4.66.0
python_requires = >=3.10

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    rsna-lumbar-spine-prediction = rsna_lumbar_spine_prediction.cli:main

[tool:pytest]
python_files = tests/*.py
